apps/gitea-mirror/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitea-mirror
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: gitea-mirror
      app.kubernetes.io/name: gitea-mirror
  serviceName: gitea-mirror
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: gitea-mirror
        app.kubernetes.io/name: gitea-mirror
    spec:
      containers:
        - name: gitea-mirror
          image: gitea-mirror
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 10
          ports:
            - name: http
              containerPort: 4321
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 10
          startupProbe:
            failureThreshold: 180
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 10
          volumeMounts:
            - name: data
              mountPath: /app/data
          resources:
            requests:
              cpu: 25m
              memory: 729Mi
      securityContext:
        fsGroup: 1000
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        resources:
          requests:
            storage: 2Gi
        storageClassName: longhorn-standard
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOncePod
