apps/gitea-mirror/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea-mirror
spec:
  rules:
    - backendRefs:
        - name: gitea-mirror
          port: 80
